--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <title>TEA Recipe</title>
+    <title>TEA Recipe!!</title>
 </head>
 <body class="">
     <div class="pagecontent">
